--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,43 @@
 <resources>
-    <string name="app_name">Android Pizza Manager Project 5</string>
+    <string name="app_name">RU Pizzeria</string>
+    <string name="nyPizzaOrderButton">Order A New York Style Pizza</string>
+    <string name="chicagoPizzaOrderButton">Order A Chicago Style Pizza</string>
+    <string name="currentOrderButton">View Current Order</string>
+    <string name="storeOrdersButton">View Store Orders</string>
+    <string name="nyPizzaOrderTitle">Ordering A New York Style Pizza</string>
+    <string name="chicagoPizzaOrderTitle">Ordering A Chicago Style Pizza</string>
+    <string name="currentOrderTitle">Viewing Current Order</string>
+    <string name="storeOrdersTitle">Viewing All Store Orders</string>
+    <string name="pizzaSizeSmall">Small</string>
+    <string name="pizzaSizeMedium">Medium</string>
+    <string name="pizzaSizeLarge">Large</string>
+    <string name="crustSelectionTitle">Select Crust Size</string>
+    <string name="submitOrder">Add Pizza To Order</string>
+    <string-array name="pizzaFlavors">
+        <item>Custom</item>
+        <item>Deluxe</item>
+        <item>BBQ Chicken</item>
+        <item>Meatzza</item>
+    </string-array>
+    <string-array name="toppingsList">
+        <item>Sausage</item>
+        <item>Pepperoni</item>
+        <item>Green Pepper</item>
+        <item>Onion</item>
+        <item>Mushroom</item>
+        <item>BBQ Chicken</item>
+        <item>Provolone</item>
+        <item>Cheddar</item>
+        <item>Beef</item>
+        <item>Ham</item>
+    </string-array>
+    <string name="flavorSelectionTitle">Select Flavor</string>
+    <string name="crustTypeTitle">Crust Type:</string>
+    <string name="submitOrderAlertTitle">Submitted Order</string>
+    <string name="submitOrderAlertMessage">Ordered your pizza!</string>
+    <string name="ok">OK</string>
+    <string name="maxToppingsAlertTitle">Maximum Toppings</string>
+    <string name="maxToppingsAlertMessage">You may not add more than 7 toppings to a pizza! Please remove some toppings.</string>
+    <string name="orderFailed">Could not place order!</string>
+    <string name="priceTitle">Price</string>
 </resources>
